# cmake

cmakeTriangles/: CMakeLists.txt
cmakeTriangles/triangles/: CMakeLists.txt  main.cpp  triangle_lib.vcxproj  triangle_lib.vcxproj.filters
my_first_cmake_project/: CMakeLists.txt
my_first_cmake_project/my_first_cmake_program/: CMakeLists.txt  my_first_cmake_program.cpp  my_first_cmake_program.h
